k8s/inference-engine/inference-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference-deployment
  namespace: intelliserve
  labels: 
    app: inference
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inference
  template:
    metadata:
      labels:
        app: inference
    spec:
      containers:
      - name: inference
        image: api-gateway-inference-engine:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
