k8s/inference-engine/inference_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow-gateway-only
  namespace: intelliserve
spec:
  podSelector:
    matchLabels:
      app: inference            
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gateway
